--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,14 +79,14 @@ if (BUILD_RPC)
   add_subdirectory(librpc)
   
   # Python Client
-  if (WITH_PY_CLIENT)
-    add_subdirectory(pyclient)
-  endif()
-  
-  # Java Client
-  if (WITH_JAVA_CLIENT)
-    add_subdirectory(javaclient)
-  endif()
+  #  if (WITH_PY_CLIENT)
+  #    add_subdirectory(pyclient)
+  #  endif()
+  #  
+  #  # Java Client
+  #  if (WITH_JAVA_CLIENT)
+  #    add_subdirectory(javaclient)
+  #  endif()
 endif()
 
 # Confluo examples
